bugfix: overflow hidden in background title

--- a/src/assets/styles/components.less
+++ b/src/assets/styles/components.less
@@ -140,6 +140,7 @@
 		margin-left: auto;
 		border: none;
 		color: @primary;
+		font-weight: bold;
 	}
 
 	&::-webkit-scrollbar {
@@ -352,6 +353,8 @@
 	z-index: -2;
 	left: 0;
 	transform: translate(0, 30%);
+	overflow: hidden;
+	max-width: 100%;
 
 	h1 {
 		text-transform: uppercase;
