--- a/src/assets/styles/typography.less
+++ b/src/assets/styles/typography.less
@@ -10,6 +10,9 @@
 .size-1 {
   font-size: 3rem;
 }
+.size-3 {
+  font-size: 1.25rem;
+}
 
 .text-centered {
   text-align: center;
